<resources>
    <string name="app_name">Demostrapp</string>
    <string name="title_activity_login">Demostrapp</string>
    <string name="title_activity_nuevoteorema">Nueva Demostración</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">e-mail</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="str_sistemas">Cambiar de sistema</string>
    <string name="str_ajustes">Ajustes</string>
    <string name="str_nuevo_sistema">Nuevo sistema</string>
    <string name="str_sistema_actual">Sistema Actual</string>
    <string name="str_crear_teorema">Crear nuevo teorema</string>
    <string name="str_continuar_teorema">Continuar teorema</string>
    <string name="str_revisar_teorema">Revisar teorema</string>
    <string name="str_comenzar">Comenzar</string>
    <string name="str_añadir">+</string>
    <string name="str_eliminar">-</string>
    <string name="str_fijar">Comenzar Demostración</string>
    <string name="str_validar">Validar</string>
    <string name="str_negacion">¬</string>
    <string name="str_abre_parentesis">(</string>
    <string name="str_cierra_parentesis">)</string>
    <string name="str_condicional">→</string>
    <string name="str_bicondicional">↔</string>
    <string name="str_conjuncion">∨</string>
    <string name="str_disyuncion">∧</string>
    <string name="str_comprobarDemos">Comprobar Demostración</string>
    <string name="action_register">Registrarse</string>
    <string name="str_logout">Salir</string>
    <string name="str_confirmaPassword">Confirmar Password</string>
    <string name="str_confirmarRegistro">Registrarse</string>
    <string name="str_informacionRegistro">Ingresa los siguientes campos</string>
    <string name="str_email">Correo electrónico</string>
    <string name="str_password">Password</string>
    <string name="str_dependenciaAcademica">Con qué área de conocimiento está relacionado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>