<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nuevo_sistema"
            android:icon="@drawable/ic_nuevo_sistema"
            android:title="@string/str_nuevo_sistema" />
        <item
            android:id="@+id/nav_sistemas"
            android:icon="@drawable/ic_sistemas"
            android:title="@string/str_sistemas" />
        <item
            android:id="@+id/nav_ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/str_ajustes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/str_logout" />
    </group>

</menu>
