<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.johnjairo.demostrapp.PantallaPrincipal"
    tools:showIn="@layout/app_bar_pantalla_principal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="495dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_sistema_actual"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/str_sistema_actual"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            tools:textStyle="italic" />

        <TextView
            android:layout_marginTop="100dp"
            android:id="@+id/text_nuevo_teorema"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/str_crear_teorema"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_comenzar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_comenzar" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/text_continuar_teorema"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/str_continuar_teorema"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/spn_continuar_teorema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/text_revisar_teorema"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/str_revisar_teorema"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <Spinner
            android:id="@+id/spn_revisar_teorema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
