<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.johnjairo.demostrapp.NuevoTeorema">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right">

        <LinearLayout
            android:id="@+id/nd_mainlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/nuevaDemosTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Prueba Deductiva"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/editText_hipotesis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"
                    android:textColorHighlight="@color/primary_light"
                    android:textColorLink="@color/primary_light" />

                <Spinner
                    android:id="@+id/spinner_inferencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btn_añadir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_añadir" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <EditText
                    android:id="@+id/editText_inferencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="5"
                    android:hint="Inferencia"
                    android:inputType="none"
                    android:textColorLink="@color/primary_light" />

                <Button
                    android:id="@+id/btn_fijar"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:text="@string/str_fijar"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nd_layout_justificacion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Justificaciòn"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_justificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_nuevo_sistema" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_validar"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/str_validar"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/btn_abre_parentesis"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_abre_parentesis"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_cierra_parentesis"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:text="@string/str_cierra_parentesis"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_condicional"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:text="@string/str_condicional"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_negacion"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_negacion"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_bicondicional"
                    android:layout_width="40dp"
                    android:layout_height="fill_parent"
                    android:text="@string/str_bicondicional"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_disyuncion"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:text="@string/str_conjuncion"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_conjuncion"
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:text="@string/str_disyuncion"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView_expresion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Expresión"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_expresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/Tabla"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

                <TableRow
                    android:id="@+id/Cabecera"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pasoColumna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Paso"
                        android:textColor="#005500"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/aValidarColumna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="5px"
                        android:text="Propos. a validar"
                        android:textColor="#005500"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/justificacionColumna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5px"
                        android:text="Justificaciòn"
                        android:textColor="#005500"
                        android:textSize="18sp" />


                </TableRow>

                <TableRow
                    android:id="@+id/SeparadorCabecera"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:id="@+id/LineaCabecera"
                        android:layout_width="fill_parent"
                        android:layout_height="2px"
                        android:layout_span="6"
                        android:background="#FFFFFF"></FrameLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/Fila1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/Anio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="-"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/Cuidad1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="-"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/Oro1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="-"
                        android:textSize="20sp" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btn_comprobarDemos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_comprobarDemos"

                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>